docs: add plugin marketplace and simplify installation
Add .claude-plugin/marketplace.json so users can install with:
  /plugin marketplace add https://github.com/FgForrest/mcp-jdwp-java.git
  /plugin install jdwp-debugging@mcp-jdwp-java

Restructure Quick Start to lead with the marketplace flow (2 commands)
and fold the manual CLI/mcp.json registration into a collapsible
"Alternative" section.